fixed hero image overflow and bottom of footer

--- a/stylesheets/media-query.css
+++ b/stylesheets/media-query.css
@@ -1,3 +1,9 @@
+@media (max-height: 660px) {
+    .footer {
+        bottom: -135vh;
+    }
+}
+
 @media (max-width: 400px) {
     .navbar {
         padding: 0 0.8em;
@@ -351,15 +357,20 @@
 
     .copyright {
         flex-direction: column;
+        text-align: center;
     }
 
     .copyright p {
         text-align: center;
     }
 
+    .copyright ul {
+        justify-content: space-between;
+    }
+
     .footer {
-        /* bottom: -173%; */
-        bottom: -200%;
+        /* bottom: -200%; */
+        bottom: -210vh;
     }
 
     .custom-shape-divider-bottom-1688843615 svg {
